fixed profile on mobile version

--- a/src/components/Feed/Feed.css
+++ b/src/components/Feed/Feed.css
@@ -39,7 +39,7 @@
   border-radius: 9999px;
 }
 
-.feed-header .MuiAvatar-root {
+.feed-header .feed-headerAvatar {
   display: none;
 }
 @media (min-width: 0) and (max-width: 1000px) {
@@ -52,9 +52,11 @@
     flex: 1;
     margin: 0px;
   }
-  .feed-header .MuiAvatar-root {
+  .feed-header .feed-headerAvatar {
     display: block;
     margin-right: 20px;
+    margin-bottom: 10px;
+    margin-top: 2px;
     height: 32px;
     width: 32px;
   }
